# Quipass

./: .gitignore  CMakeLists.txt  README.md  saved_logins.json  ui-manager.html  updateHTML.py
include/: CMakeLists.txt
libs/: CMakeLists.txt
src/: CMakeLists.txt  fileHandler.cpp  fileHandler.hpp  main.cpp  uiHandler.cpp  uiHandler.hpp
